@@ -17,13 +17,12 @@
 #
 # The LinkPoint staging server will also return different responses based
 # on the cent amount of the purhcase. Complete details can be found at
-# http://sgserror.com/staging.php
-
 require File.dirname(__FILE__) + '/../../test_helper'
 
+# http://sgserror.com/staging.php
 class LinkpointTest < Test::Unit::TestCase
   def setup
-    Base.gateway_mode = :test
+    Base.mode = :test
     
     @gateway = LinkpointGateway.new(fixtures(:linkpoint))
         
@@ -35,72 +34,47 @@ class LinkpointTest < Test::Unit::TestCase
     # MasterCard: 5419-8400-0000-0003
     # Visa: 4111-1111-1111-1111
 
-    @creditcard = credit_card('4111111111111111')
-    
-    @address = {
-      :address1 => '1313 lucky lane',
-      :city => 'Lost Angeles',
-      :state => 'ON',
-      :zip => 'K2P2A6',
-      :country => 'CA',
-      :address2 => 'Apartment 1',
-      :phone => '(555)555-5555'
-     }
+    @amount = 100
+    @credit_card = credit_card('4111111111111111')
+    @options = { :order_id => generate_order_id, :billing_address => address }
   end
   
   def test_successful_authorization
-    assert response = @gateway.authorize(1000, @creditcard, 
-      :order_id => generate_order_id, 
-      :address => @address
-    )
-  
-    assert_equal Response, response.class
-    assert_equal true, response.success?
+    assert response = @gateway.authorize(1000, @credit_card, @options)
+    
+    assert_instance_of Response, response
+    assert_success response
     assert_equal "APPROVED", response.params["approved"]
   end
   
   def test_successful_authorization_and_capture
-    assert authorization = @gateway.authorize(100, @creditcard,
-      :order_id => generate_order_id,
-      :address => @address
-    )
-    
+    assert authorization = @gateway.authorize(@amount, @credit_card, @options)
     assert_success authorization
     assert authorization.test?
-    assert capture = @gateway.capture(100, authorization.authorization)
+    
+    assert capture = @gateway.capture(@amount, authorization.authorization)
     assert_success capture
     assert_equal 'ACCEPTED', capture.message
   end
   
   def test_successful_purchase_without_cvv2_code
-    @creditcard.verification_value = nil
+    @credit_card.verification_value = nil
     
-    assert response = @gateway.purchase(2400, @creditcard, 
-      :order_id => generate_order_id,
-      :address => @address
-    )
-    assert_equal Response, response.class
-    assert_equal true, response.success?
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
+    assert_success response
     assert_equal "APPROVED", response.params["approved"]
     assert_equal 'NNN', response.params["avs"]
   end
   
   def test_successful_purchase_with_cvv2_code
-    assert response = @gateway.purchase(2400, @creditcard, 
-      :order_id => generate_order_id,
-      :address => @address
-    )
-    assert_equal Response, response.class
-    assert_equal true, response.success?
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
+    assert_success response
     assert_equal "APPROVED", response.params["approved"]
     assert_equal 'NNNM', response.params["avs"]
   end
   
   def test_successful_purchase_and_void
-    purchase = @gateway.purchase(100, @creditcard,
-      :order_id => generate_order_id,
-      :address => @address
-    )
+    purchase = @gateway.purchase(@amount, @credit_card, @options)
     assert_success purchase
     
     assert void = @gateway.void(purchase.authorization)
@@ -108,11 +82,8 @@ class LinkpointTest < Test::Unit::TestCase
   end
   
   def test_successfull_purchase_and_credit
-    assert purchase = @gateway.purchase(2400, @creditcard, 
-      :order_id => generate_order_id,
-      :address => @address
-    )
-    assert_equal true, purchase.success?
+    assert purchase = @gateway.purchase(2400, @credit_card, @options)
+    assert_success purchase
     
     assert credit = @gateway.credit(2400, purchase.authorization)
     assert_success credit
@@ -120,29 +91,22 @@ class LinkpointTest < Test::Unit::TestCase
 
   
   def test_successful_recurring_payment
-    assert response = @gateway.recurring(2400, @creditcard, 
+    assert response = @gateway.recurring(2400, @credit_card, 
       :order_id => generate_order_id, 
       :installments => 12,
       :startdate => "immediate",
       :periodicity => :monthly,
-      :address => @address
+      :billing_address => address
     )
     
-    assert_equal Response, response.class
-    assert_equal true, response.success?
+    assert_success response
     assert_equal "APPROVED", response.params["approved"]
   end
   
-  
   def test_declined_purchase_with_invalid_credit_card
-    @creditcard.number = '1111111111111111'
-    assert response = @gateway.purchase(100, @creditcard, 
-      :order_id => generate_order_id,
-      :address => @address
-    )
-    
-    assert_equal Response, response.class
-    assert_equal false, response.success?
+    @credit_card.number = '1111111111111111'
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
+    assert_failure response
     assert_equal "DECLINED", response.params["approved"]
   end
 end
